<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/glass_header_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffF0F3F5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24.0dip"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_show_ocr_result"
                    android:layout_width="@dimen/ocr_compared_img_w_h"
                    android:layout_height="@dimen/ocr_compared_img_w_h"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pictures_no" />

                <ImageView
                    android:id="@+id/iv_show_glass_result"
                    android:layout_width="@dimen/ocr_compared_img_w_h"
                    android:layout_height="@dimen/ocr_compared_img_w_h"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/pictures_no" />

            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="52.0dip"
                android:layout_marginTop="38.0dip"
                android:background="@color/white">

                <View style="@style/common_divide_line" />

                <TextView
                    style="@style/ocr_start_text_style"
                    android:text="@string/ocr_self" />

                <TextView
                    android:id="@+id/tv_is_self"
                    style="@style/ocr_end_text_style"
                    android:textSize="@dimen/testSize18" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="52.0dip"
                android:background="@color/white">

                <View style="@style/common_divide_line" />

                <TextView
                    style="@style/ocr_start_text_style"
                    android:text="@string/ocr_approve_sim" />

                <TextView
                    android:id="@+id/tv_approve_sim_pct"
                    style="@style/ocr_end_text_style"
                    android:textSize="@dimen/testSize18" />

                <View
                    style="@style/common_divide_line"
                    android:layout_alignParentBottom="true" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="52.0dip"
                android:layout_marginTop="30.0dip"
                android:background="@color/white">

                <View style="@style/common_divide_line" />

                <TextView
                    style="@style/ocr_start_text_style"
                    android:text="@string/ocr_recog_name" />

                <TextView
                    android:id="@+id/tv_ocr_recog_name"
                    style="@style/ocr_end_text_style"
                    android:textSize="@dimen/testSize18" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="52.0dip"
                android:background="@color/white">

                <View style="@style/common_divide_line" />

                <TextView
                    style="@style/ocr_start_text_style"
                    android:text="@string/ocr_recog_sex" />

                <TextView
                    android:id="@+id/tv_ocr_recog_sex"
                    style="@style/ocr_end_text_style"
                    android:textSize="@dimen/testSize18" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="52.0dip"
                android:background="@color/white">

                <View style="@style/common_divide_line" />

                <TextView
                    style="@style/ocr_start_text_style"
                    android:text="@string/ocr_recog_birth_date" />

                <TextView
                    android:id="@+id/tv_ocr_recog_birth_date"
                    style="@style/ocr_end_text_style"
                    android:textSize="@dimen/testSize18" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="52.0dip"
                android:background="@color/white">

                <View style="@style/common_divide_line" />

                <TextView
                    android:id="@+id/tv_family_address"
                    style="@style/ocr_start_text_style"
                    android:text="@string/ocr_recog_family_address" />

                <TextView
                    android:id="@+id/tv_ocr_recog_family_address"
                    style="@style/ocr_end_text_style"
                    android:layout_marginLeft="15.0dip"
                    android:layout_toEndOf="@+id/tv_family_address"
                    android:gravity="end"
                    android:maxLines="2"
                    android:textSize="@dimen/testSize12" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="52.0dip"
                android:background="@color/white">

                <View style="@style/common_divide_line" />

                <TextView
                    android:id="@+id/tv_idcard"
                    style="@style/ocr_start_text_style"
                    android:text="@string/ocr_recog_idcard" />

                <TextView
                    android:id="@+id/tv_ocr_recog_idcard"
                    style="@style/ocr_end_text_style"
                    android:layout_toEndOf="@id/tv_idcard"
                    android:gravity="end"
                    android:textSize="@dimen/testSize12" />

                <View
                    style="@style/common_divide_line"
                    android:layout_alignParentBottom="true" />

            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>