<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/vip_list_bg"
    android:orientation="vertical">

    <include layout="@layout/glass_header_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="106.0dip"
        android:layout_marginTop="34.0dip"
        android:background="@color/white">

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dip"
            android:background="#ffdddddd" />

        <ImageView
            android:id="@+id/iv_user_header"
            android:layout_width="80.0dip"
            android:layout_height="80.0dip"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20.0dip"
            android:layout_marginTop="16.0dip"
            android:background="@drawable/userimg"
            android:scaleType="centerInside" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="22.0dip"
            android:text="@string/set_register_icon"
            android:textColor="@color/common_text_color"
            android:textSize="@dimen/testSize18" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dip"
            android:layout_alignParentBottom="true"
            android:background="#ffdddddd" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52.0dip"
        android:layout_marginTop="34.0dip"
        android:background="@color/white">

        <View style="@style/common_divide_line" />

        <TextView
            style="@style/ocr_start_text_style"
            android:text="@string/set_register_name" />

        <EditText
            android:id="@+id/edt_register_name"
            style="@style/ocr_end_text_style"
            android:layout_marginLeft="15.0dip"
            android:background="@null"
            android:gravity="end"
            android:hint="请输入姓名"
            android:maxLength="5"
            android:maxLines="1"
            android:textColorHint="@color/line_bg"
            android:textSize="@dimen/testSize18" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52.0dip"
        android:background="@color/white">

        <View style="@style/common_divide_line" />

        <TextView
            style="@style/ocr_start_text_style"
            android:text="@string/set_register_idcard" />

        <EditText
            android:id="@+id/edt_set_register_idcard"
            style="@style/ocr_end_text_style"
            android:layout_marginLeft="15.0dip"
            android:background="@null"
            android:digits="0123456789xyzXYZ"
            android:gravity="end"
            android:hint="请输入身份证"
            android:inputType="number"
            android:maxLength="18"
            android:maxLines="1"
            android:textColorHint="@color/line_bg"
            android:textSize="@dimen/testSize12" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52.0dip"
        android:background="@color/white">

        <View style="@style/common_divide_line" />

        <TextView
            style="@style/ocr_start_text_style"
            android:text="@string/set_register_vip_level" />

        <EditText
            android:id="@+id/edt_set_register_vip_level"
            style="@style/ocr_end_text_style"
            android:layout_marginLeft="15.0dip"
            android:background="@null"
            android:gravity="end"
            android:hint="请输入VIP等级"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1"
            android:textSize="@dimen/testSize18" />

        <View
            style="@style/common_divide_line"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>


</LinearLayout>
